syntax = "proto3";

option go_package = "github.com/blupulov/xwsDislinkt/common/following-service";

package followingservice;

import "google/api/annotations.proto";

service FollowingService{
  rpc GetAllUserFollowers(GetAllUserFollowersRequest) returns(GetAllUserFollowersResponse) {
    option (google.api.http) = {
      get: "/follow/{userId}/followers"
    };
  }
  rpc GetAllFollowingUsers(GetAllFollowingUsersRequest) returns(GetAllFollowingUsersResponse) {
    option (google.api.http) = {
      get: "/follow/{userId}/following"
    };
  }
  rpc Follow(FollowUserRequest) returns (FollowUserResponse) {
    option (google.api.http) = {
      post: "/follow/{userId}/follow/{targetUserId}"
    };
  }
  rpc UnFollow(UnFollowUserRequest) returns (UnFollowUserResponse) {
    option (google.api.http) = {
      delete: "/follow/{userId}/unfollow/{targetUserId}"
    };
  }
}

message UnFollowUserRequest {
  string userId = 1;
  string targetUserId = 2;
}

message UnFollowUserResponse {

}

message FollowUserRequest {
  string userId = 1;
  string targetUserId = 2;
}

message FollowUserResponse {

}

message GetAllFollowingUsersRequest {
  string userId = 1;
}

message GetAllFollowingUsersResponse {
  repeated string usersIds = 1;
}

message GetAllUserFollowersRequest {
  string userId = 1;
}

message GetAllUserFollowersResponse {
  repeated string usersIds = 1;
}